--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,17 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
+block content
+  form(action="/tasks/add", method="post")
+  form(action="/tasks/add", method="post")
+    label(for="title")
+    label(for="title")
+      | Tytuł
+      | Tytuł
+    br
+    br
+    input(type="text" id="title" name="title")
+    input(type="text" id="title" name="title")
+    br
+    br
+    input(type="submit", value="Dodaj")
+    input(type="submit", value="Dodaj")
